@@ -10,6 +10,7 @@ Bugfix
    * Add ecc extensions only if an ecc based ciphersuite is used.
      This improves compliance to RFC 4492, and as a result, solves
      interoperability issues with BouncyCastle. Raised by milenamil in #1157.
+   * Replace printf with mbedtls_printf in aria. Found by TrinityTonic in #1908.
 
 Changes
    * Copy headers preserving timestamps when doing a "make install".
